# HANGMAN-GAME-

./: CMakeLists.txt  README.md  main.c
cmake_modules/: FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
